modules/LVSURVEY/css/LVSURVEY.css
.LVSURVEYQuestionList{
	padding : 0;
}

.LVSURVEYLine, .LVSURVEYQuestion, .LVSURVEYParticipation, .LVSURVEYBloc {
	margin : 10px 0px;
	border: 1px #cccccc solid;
	padding : 0px;
	overflow : auto;
}
	
.LVSURVEYLineTitle, .LVSURVEYQuestionTitle, .LVSURVEYParticipationTitle, .LVSURVEYBlocTitle {
	list-style-type : decimal;
	list-style-position: inside;
	margin:0 0 0px 0;
	color: #693;
    font-weight: bold;
    padding: 2px 5px 2px 5px;
    background-color: #EDF1E3;
    border: 0px #96BB7A solid;
}

.LVSURVEYParticipationBloc{
	border: 2px #EDF1E3 solid;
	margin: 5px;
	padding: 2px;
	display: block;
	float: left;
}
.LVSURVEYParticipationBlocTitle{
	font-weight: bold;
	text-decoration: underline;
}


.LVSURVEYQuestionContent {
	padding : 5px;
	clear : both;
}

.LVSURVEYQuestionContent ul{
	list-style-position: inside;
	list-style-type: none;
}

.LVSURVEYQuestionResultChart
{
	width : 500px;
	height: 150px;
	border: 1px dashed gainsboro;
	float : right;
}

.LVSURVEYQuestionResultChart.OPEN 
{
	visibility: hidden;
}


ul.detailedList{
	list-style:disc;
	color:#4D5183;
	font-size: x-small;
	margin-left: 0; 
	padding-left: 2.5em;
}

.deployDetailedList, .hideDetailedList
{
	font-size : smaller;
}


.answerCommentBlock
{
	padding-top : 5px;
	padding-bottom : 5px;
}

.questionComment
 {
 	font-size : small;
 	color:#4D5183;
 }

